# Multifrost

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_MONOREPO.md  api-vision.md  dist-workspace.toml
.github/workflows/: release.yml
agent_chat/: Anubis_Findings_2026_02_23.md  Anubis_Findings_2026_03_13.md  Anubis_Perf_Findings_2026_02_23.md  Hathor_Ideas_2026_02_23.md  plan_crosslang_fixes_2026_02_23.md  plan_js-int64-interop_2026-03-13.md  worker-handle-refactor-2026-02-17.md
docs/: adding_a_language.md  api-reference.md  arch.md  arch_index.md  arch_router.md  glossary.md  msgpack_interop.md  product.md  protocol.md  repo.md  spec.md  support_matrix.md
docs/legacy/: v5_progress.md  v5_rewrite_plan.md
e2e/: Makefile  demo_app.py  requirements.txt  test_e2e.py  test_e2e.ts  test_quick.ts
e2e/workers/: __init__.py  math_worker.php  math_worker.py  math_worker.ts
examples/: concurrency_parent.py  math_worker.ts  math_worker_service.py  math_worker_service.ts  node_calls_node.ts  node_calls_py.ts  parent_connects.py  parent_connects.ts
golang/: .golangci.yml  AGENTS.md  child_worker.go  child_worker_dispatch_test.go  child_worker_test.go  circuit_breaker_test.go  concurrent_test.go  connection.go  errors.go  frame.go  go.mod  go.sum  heartbeat_test.go  integration_test.go  message.go  message_test.go  metrics.go  metrics_test.go  multifrost.go  parent_worker.go  parent_worker_test.go  process.go  process_unix.go  process_windows.go  protocol.go  router_bootstrap.go  service.go  service_registry.go  service_registry_test.go  test_dispatch_types.go  test_interface.go  test_interface_unwrap.go  test_slices.go  transport.go  utils.go  v5_bootstrap_test.go  v5_caller_service_test.go  v5_frame_test.go  v5_interop_test.go  v5_test_support_test.go
golang/docs/: arch.md  faq.md  quick-examples.md
javascript/: .prettierrc  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
javascript/docs/: arch.md  faq.md  quick-examples.md
javascript/examples/: math_worker_service.ts  node_calls_node.ts  node_calls_py.ts  parent_connects.ts
javascript/src/: connection.ts  errors.ts  frame.ts  index.ts  logging.ts  metrics.ts  multifrost.ts  process.ts  protocol.ts  router_bootstrap.ts  service.ts  service_registry.ts  transport.ts
javascript/tests/: child_worker.test.ts  circuit_breaker.test.ts  e2e.test.ts  e2e_minimal.test.ts  logging.test.ts  message.test.ts  metrics.test.ts  parent_worker.test.ts  service_registry.test.ts  test.test.ts  v5_interop.test.ts  v5_test_support.ts  v5_unit.test.ts
php/: AGENTS.md  composer.json
php/docs/: arch.md  faq.md  quick-examples.md
php/examples/: math_caller.php  math_service.php
php/src/: Connection.php  Errors.php  Frame.php  Process.php  Protocol.php  RouterBootstrap.php  Service.php  Transport.php  functions.php
php/tests/: BootstrapIntegrationTest.php  ConnectionUnitTest.php  ErrorsTest.php  FrameEdgeCaseTest.php  FrameTest.php  FunctionsTest.php  (+6 more)
python/: AGENTS.md  README.md  REFACTOR.md  pyproject.toml
python/docs/: arch.md  faq.md  quick-examples.md
python/examples/: concurrency_parent.py  concurrency_worker.py  math_worker.py  math_worker_service.py  parent_connects.py  py_calls_node.py  py_calls_rust.py
python/src/multifrost/: __init__.py  connection.py  errors.py  frame.py  process.py  protocol.py  router_bootstrap.py  service.py  sync.py  transport.py
python/src/multifrost/core/: __init__.py  async_worker.py  child.py  logging.py  message.py  metrics.py  service_registry.py  sync_wrapper.py
python/tests/: conftest.py  test_child.py  test_message.py  test_observability.py  test_service_registry.py  test_sync_wrapper.py  test_v3.py  test_v4.py  test_v5_frame_and_transport.py  test_v5_interop.py  test_v5_runtime.py
router/: Cargo.toml  README.md  dist-workspace.toml
router/src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs  registry.rs  server.rs
router/tests/: router_integration.rs
rust/: AGENTS.md  Cargo.toml  rustfmt.toml
rust/docs/: arch.md  faq.md  quick-examples.md
rust/examples/: connect.rs  e2e_math_worker.rs  math_worker.rs  parent.rs  spawn.rs
rust/src/: call_macro.rs  caller_transport.rs  child.rs  error.rs  lib.rs  logging.rs  message.rs  metrics.rs  parent.rs  process.rs  registry.rs  router_bootstrap.rs  test_utils.rs
rust/tests/: v5_mock_router.rs
scripts/: install.ps1  install.sh  rust_router_smoke.sh
(+6 files in other folders)
