[project]
name = "multifrost"
version = "1.0.0"
description = "Simple IPC library for Python and Node.js inspired by comlink.js"
authors = [{ name = "lirrensi", email = "you@example.com" }]
license = {text = "MIT"}
dependencies = ["pyzmq", "msgpack"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
