[project]
name = "multifrost"
version = "4.0.0"
description = "Cross-language IPC library for Python, Node.js, Go, and Rust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.1.2",
    "psutil>=7.2.2",
    "zmq>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

# Linting & Formatting (used by ruff, black, mypy)
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
