[package]
name = "multifrost-router"
version = "5.0.0"
edition = "2021"
description = "Standalone Multifrost v5 WebSocket router"
license = "MIT"

[dependencies]
bytes = "1.11.0"
dirs = "5.0.1"
futures-util = "0.3.31"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
