[package]
name = "multifrost"
version = "0.1.0"
edition = "2021"
description = "Lightweight IPC library for Rust - spawn and control worker processes"
license = "MIT"
authors = ["Multifrost Contributors"]

[dependencies]
tokio = { version = "1", features = ["full"] }
zeromq = "0.4"
bytes = "1"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
async-trait = "0.1"
dirs = "5"
md5 = "0.7"

[[example]]
name = "math_worker"
path = "examples/math_worker.rs"

[[example]]
name = "parent"
path = "examples/parent.rs"

[[example]]
name = "spawn"
path = "examples/spawn.rs"
