[package]
name = "multifrost"
version = "5.0.0"
edition = "2021"
description = "Lightweight IPC library for Rust - spawn and control worker processes"
license = "MIT"
authors = ["Multifrost Contributors"]

[dependencies]
async-trait = "0.1"
bytes = "1"
dirs = "5"
futures-util = "0.3"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
tempfile = "3.8"

[[example]]
name = "math_worker"
path = "examples/math_worker.rs"

[[example]]
name = "parent"
path = "examples/parent.rs"

[[example]]
name = "spawn"
path = "examples/spawn.rs"

[[example]]
name = "connect"
path = "examples/connect.rs"

[[example]]
name = "e2e_math_worker"
path = "examples/e2e_math_worker.rs"
